--- a/HomeHero/Base.lproj/Main.storyboard
+++ b/HomeHero/Base.lproj/Main.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13156.6" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BV1-FR-VrT">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BV1-FR-VrT">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13137.5"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,7 +13,7 @@
         <scene sceneID="tXr-a1-R10">
             <objects>
                 <viewController id="BV1-FR-VrT" customClass="HomeHeroViewController" customModule="HomeHero" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="YES" id="QlH-Bh-kNZ">
+                    <view key="view" contentMode="scaleToFill" id="QlH-Bh-kNZ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
@@ -28,68 +28,14 @@
                                     <constraint firstAttribute="height" constant="60" id="XFg-nr-788"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                                <state key="normal" title="💺"/>
+                                <state key="normal" title="📷"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                         <integer key="value" value="2"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                                 <connections>
-                                    <action selector="didTapChair:" destination="BV1-FR-VrT" eventType="touchUpInside" id="rCn-L7-Oih"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jrH-WM-PjT" customClass="SelectableButton" customModule="HomeHero" customModuleProvider="target">
-                                <rect key="frame" x="15" y="163.5" width="50" height="60"/>
-                                <color key="backgroundColor" red="0.20000000000000001" green="0.80000000000000004" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="50" id="8ec-NL-oav"/>
-                                    <constraint firstAttribute="height" constant="60" id="Gtl-cD-Qhd"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                                <state key="normal" title="⚱️"/>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                        <integer key="value" value="2"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                                <connections>
-                                    <action selector="didTapVase:" destination="BV1-FR-VrT" eventType="touchUpInside" id="yfs-4S-fud"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kOP-mX-yos" customClass="SelectableButton" customModule="HomeHero" customModuleProvider="target">
-                                <rect key="frame" x="15" y="323.5" width="50" height="60"/>
-                                <color key="backgroundColor" red="0.20000000000000001" green="0.80000000000000004" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="50" id="6jn-v0-xLe"/>
-                                    <constraint firstAttribute="height" constant="60" id="k8b-kd-oGL"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                                <state key="normal" title="🕯"/>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                        <integer key="value" value="2"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                                <connections>
-                                    <action selector="didTapCandle:" destination="BV1-FR-VrT" eventType="touchUpInside" id="ISu-M0-TVG"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OsF-59-Tdh" customClass="SelectableButton" customModule="HomeHero" customModuleProvider="target">
-                                <rect key="frame" x="15" y="403.5" width="50" height="60"/>
-                                <color key="backgroundColor" red="0.20000000000000001" green="0.80000000000000004" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="60" id="icu-Bi-Dhi"/>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="50" id="rDf-k1-hu8"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                                <state key="normal" title="📏"/>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                        <integer key="value" value="2"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                                <connections>
-                                    <action selector="didTapMeasure:" destination="BV1-FR-VrT" eventType="touchUpInside" id="vo1-hW-ZMI"/>
+                                    <action selector="didTapPolaroid:" destination="BV1-FR-VrT" eventType="touchUpInside" id="JoD-em-bW6"/>
                                 </connections>
                             </button>
                             <view alpha="0.69999999999999996" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vZg-HR-Zde">
@@ -106,13 +52,6 @@
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                 </userDefinedRuntimeAttributes>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Distance" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wDJ-CS-JZm">
-                                <rect key="frame" x="83" y="423.5" width="67" height="20.5"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.11273107394366197" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Messages" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="59g-8M-wNk">
                                 <rect key="frame" x="146.5" y="29.5" width="83" height="20.5"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
@@ -141,46 +80,32 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="d7l-h5-7gS" secondAttribute="bottom" id="0ZO-fM-Whd"/>
+                            <constraint firstItem="JKT-Nc-1mx" firstAttribute="top" secondItem="4Cn-bS-afn" secondAttribute="bottom" constant="175" id="1Vd-Fh-tyV"/>
                             <constraint firstItem="4Cn-bS-afn" firstAttribute="leading" secondItem="fYk-Qj-Qjx" secondAttribute="leading" constant="15" id="1jG-Ds-Mty"/>
                             <constraint firstItem="Nkz-3P-nMZ" firstAttribute="centerX" secondItem="d7l-h5-7gS" secondAttribute="centerX" id="3ae-S2-9ur"/>
-                            <constraint firstItem="kOP-mX-yos" firstAttribute="top" secondItem="4Cn-bS-afn" secondAttribute="bottom" constant="20" id="6gQ-Hh-QbI"/>
                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="JKT-Nc-1mx" secondAttribute="trailing" constant="20" symbolic="YES" id="70X-pQ-JIn"/>
-                            <constraint firstItem="OsF-59-Tdh" firstAttribute="leading" secondItem="fYk-Qj-Qjx" secondAttribute="leading" constant="15" id="C5B-dE-XAL"/>
-                            <constraint firstItem="wDJ-CS-JZm" firstAttribute="leading" secondItem="QlH-Bh-kNZ" secondAttribute="leading" constant="83" id="Fgm-br-UJl"/>
-                            <constraint firstItem="kOP-mX-yos" firstAttribute="leading" secondItem="fYk-Qj-Qjx" secondAttribute="leading" constant="15" id="GQu-Rv-2NL"/>
                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="4Cn-bS-afn" secondAttribute="trailing" constant="20" symbolic="YES" id="IrO-2U-EPt"/>
                             <constraint firstItem="d7l-h5-7gS" firstAttribute="top" secondItem="59g-8M-wNk" secondAttribute="bottom" constant="-50" id="Laq-8W-hJv"/>
-                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="kOP-mX-yos" secondAttribute="trailing" constant="20" symbolic="YES" id="NEJ-Zg-9bP"/>
                             <constraint firstItem="4Cn-bS-afn" firstAttribute="centerY" secondItem="QlH-Bh-kNZ" secondAttribute="centerY" constant="-60" id="Pux-YK-Iq0"/>
                             <constraint firstItem="d7l-h5-7gS" firstAttribute="top" secondItem="QlH-Bh-kNZ" secondAttribute="top" id="RBf-wi-tzb"/>
-                            <constraint firstItem="JKT-Nc-1mx" firstAttribute="top" secondItem="OsF-59-Tdh" secondAttribute="bottom" constant="15" id="SL7-Et-5ui"/>
                             <constraint firstItem="d7l-h5-7gS" firstAttribute="leading" secondItem="fYk-Qj-Qjx" secondAttribute="leading" id="W2m-on-DuJ"/>
-                            <constraint firstItem="fYk-Qj-Qjx" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="wDJ-CS-JZm" secondAttribute="trailing" symbolic="YES" id="YcN-lw-1fb"/>
                             <constraint firstItem="fYk-Qj-Qjx" firstAttribute="trailing" secondItem="d7l-h5-7gS" secondAttribute="trailing" id="bNQ-1i-Ij8"/>
+                            <constraint firstItem="fYk-Qj-Qjx" firstAttribute="bottom" secondItem="JKT-Nc-1mx" secondAttribute="bottom" constant="128.5" id="bwr-vH-Nn9"/>
+                            <constraint firstItem="fYk-Qj-Qjx" firstAttribute="trailing" secondItem="JKT-Nc-1mx" secondAttribute="trailing" constant="315" id="dqo-ey-wEQ"/>
                             <constraint firstItem="vZg-HR-Zde" firstAttribute="centerX" secondItem="d7l-h5-7gS" secondAttribute="centerX" id="f5y-k8-PdT"/>
                             <constraint firstItem="59g-8M-wNk" firstAttribute="centerX" secondItem="d7l-h5-7gS" secondAttribute="centerX" id="fLV-mf-5GK"/>
-                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="OsF-59-Tdh" secondAttribute="trailing" constant="20" symbolic="YES" id="fxU-Iq-1o5"/>
-                            <constraint firstItem="OsF-59-Tdh" firstAttribute="top" secondItem="kOP-mX-yos" secondAttribute="bottom" constant="20" id="gtX-SY-spd"/>
                             <constraint firstItem="vZg-HR-Zde" firstAttribute="centerY" secondItem="d7l-h5-7gS" secondAttribute="centerY" id="lG0-hK-5M8"/>
-                            <constraint firstItem="wDJ-CS-JZm" firstAttribute="centerY" secondItem="OsF-59-Tdh" secondAttribute="centerY" id="nx6-AT-TPA"/>
                             <constraint firstItem="Nkz-3P-nMZ" firstAttribute="top" secondItem="d7l-h5-7gS" secondAttribute="bottom" constant="-48" id="oDZ-Mf-o9W"/>
-                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="jrH-WM-PjT" secondAttribute="trailing" constant="20" symbolic="YES" id="pGk-n2-Uck"/>
                             <constraint firstItem="JKT-Nc-1mx" firstAttribute="leading" secondItem="fYk-Qj-Qjx" secondAttribute="leading" constant="15" id="qHJ-al-zKd"/>
-                            <constraint firstItem="jrH-WM-PjT" firstAttribute="leading" secondItem="fYk-Qj-Qjx" secondAttribute="leading" constant="15" id="rgR-kU-g6H"/>
-                            <constraint firstItem="4Cn-bS-afn" firstAttribute="top" secondItem="jrH-WM-PjT" secondAttribute="bottom" constant="20" id="xUy-Ye-WGP"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="fYk-Qj-Qjx"/>
                     </view>
                     <connections>
-                        <outlet property="candleButton" destination="kOP-mX-yos" id="esl-Os-sXF"/>
-                        <outlet property="chairButton" destination="4Cn-bS-afn" id="05B-nA-tZh"/>
                         <outlet property="crosshair" destination="vZg-HR-Zde" id="CFe-Oy-oxN"/>
-                        <outlet property="distanceLabel" destination="wDJ-CS-JZm" id="fom-ZP-lpe"/>
-                        <outlet property="measureButton" destination="OsF-59-Tdh" id="m6D-Cd-YNE"/>
                         <outlet property="messageLabel" destination="59g-8M-wNk" id="Vgp-gq-UKT"/>
+                        <outlet property="polaroidButton" destination="4Cn-bS-afn" id="hYS-aw-qei"/>
                         <outlet property="sceneView" destination="d7l-h5-7gS" id="KPR-Vr-DzQ"/>
                         <outlet property="trackingInfo" destination="Nkz-3P-nMZ" id="Bqe-y1-2wo"/>
-                        <outlet property="vaseButton" destination="jrH-WM-PjT" id="Nch-fb-CVY"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
